<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.l5rhelp.ui.fragment.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/settings_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_images_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/settings_load_photo_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:text="@string/settings_load_photo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_DB_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/settings_upgrade_cards_DB_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_upgrade_cards_DB_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_upgrade_cards_DB_button"
            app:layout_constraintBottom_toBottomOf="@id/settings_upgrade_cards_DB_button"/>

        <Button
            android:id="@+id/settings_upgrade_cards_DB_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/settings_upgrade_DB_button"/>

        <TextView
            android:id="@+id/settings_upgrade_rules_DB_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_upgrade_rules_DB_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_upgrade_rules_DB_button"
            app:layout_constraintBottom_toBottomOf="@id/settings_upgrade_rules_DB_button"/>

        <Button
            android:id="@+id/settings_upgrade_rules_DB_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_upgrade_cards_DB_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/settings_upgrade_DB_button"/>
    </android.support.constraint.ConstraintLayout>




</LinearLayout>
